k8s/applications/media/arr/lidarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  selector:
    app: lidarr
  ports:
    - name: http
      port: 8686
      targetPort: http
