k8s/applications/media/arr/lidarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: media
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - "lidarr.smadja.dev"
  rules:
    - backendRefs:
        - name: lidarr
          port: 8686
